--- a/qml.qrc
+++ b/qml.qrc
@@ -14,5 +14,25 @@
         <file>PictImage.qml</file>
         <file>Clock.qml</file>
         <file>SecondsProgress.qml</file>
+        <file>WeatherInfo.qml</file>
+        <file>fonts/yantramanav/www.dafontfree.net.url</file>
+        <file>fonts/yantramanav/Yantramanav-Bold.ttf</file>
+        <file>icons/weather-clear.png</file>
+        <file>icons/weather-few-clouds.png</file>
+        <file>icons/weather-sunny-very-few-clouds.png</file>
+        <file>icons/weather-uknown.png</file>
+        <file>components/BigForecastIcon.qml</file>
+        <file>components/ForecastIcon.qml</file>
+        <file>components/WeatherIcon.qml</file>
+        <file>icons/weather-overcast.png</file>
+        <file>icons/weather-sunny.png</file>
+        <file>icons/weather-fog.png</file>
+        <file>icons/weather-haze.png</file>
+        <file>icons/weather-icy.png</file>
+        <file>icons/weather-showers.png</file>
+        <file>icons/weather-sleet.png</file>
+        <file>icons/weather-snow.png</file>
+        <file>icons/weather-storm.png</file>
+        <file>icons/weather-thundershower.png</file>
     </qresource>
 </RCC>
